# tauri-apps_window-shadows

./: Cargo.toml
examples/tauri/src-tauri/: Cargo.toml
